Fix failing microbenchmarks. Contributed by @FrauBoes (thanks!)